--- a/setup/Dockerfile.latest
+++ b/setup/Dockerfile.latest
@@ -16,7 +16,7 @@ RUN apt-get update -y && \
 # download installation files
 RUN git clone https://github.com/silvanmelchior/RPi_Cam_Web_Interface.git && \
     # comment the following line to download the untested most recent version
-    cd RPi_Cam_Web_Interface; git checkout 2bc8542; cd .. && \
+    # cd RPi_Cam_Web_Interface; git checkout 2bc8542; cd .. && \
     chmod u+x RPi_Cam_Web_Interface/*.sh
 
 # workarounds
