--- a/setup/Dockerfile
+++ b/setup/Dockerfile
@@ -8,15 +8,15 @@ RUN mkdir -p /rpi-cam-web
 WORKDIR /rpi-cam-web
 
 RUN apt-get update -y && \
-    apt-get install -y git nano
+    apt-get install -y git nano psmisc
     # psmisc
 
 # psmisc for killall
 # rest from install.sh:322
 
-RUN echo "deb http://archive.raspbian.org/raspbian jessie main" | sudo tee --append /etc/apt/sources.list \
+RUN echo "deb http://archive.raspbian.org/raspbian jessie main" | tee --append /etc/apt/sources.list \
     apt-get update -y && \
-    apt-get install -y psmisc dialog nginx php5-fpm php5-cli php5-common php-apc apache2-utils gpac motion zip libav-tools gstreamer1.0-tools
+    apt-get install -y dialog nginx php5-fpm php5-cli php5-common php-apc apache2-utils gpac motion zip libav-tools gstreamer1.0-tools
 
 # download installation files
 RUN git clone https://github.com/silvanmelchior/RPi_Cam_Web_Interface.git && \
